--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -1,8 +1,11 @@
 .LoginPage {
-  margin-top: 150px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+}
+
+.LoginPage__Head {
+
+}
+
+.LoginPage__Head--text {
 
 }
