--- a/basic_client/src/components/ChatPage/ChatPage.css
+++ b/basic_client/src/components/ChatPage/ChatPage.css
@@ -18,3 +18,17 @@
   border-radius: 5px;
 
 }
+
+dd {
+  /*float: left;
+  width: 50%;
+  padding: 0;
+  margin: 0*/
+}
+
+dt {
+  /*float: left;
+  width: 50%;
+  padding: 0;
+  margin: 0*/
+}
